--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -17,7 +17,7 @@ color:#000;
         <div >
             <h1 th:utext="#{label.form.title}">form</h1>
             <br/>
-            <form action="/" method="POST" enctype="utf8" >
+            <form method="POST" enctype="utf8" >
                 <div class="form-group row" >
                     <label for="firstName" class="col-sm-3" th:utext="#{label.user.firstName}">first</label>
                     <span class="col-sm-5"><input id="firstName" class="form-control" name="firstName" value="" required="required"/></span>
