--- a/src/main/resources/templates/registrationCaptcha.html
+++ b/src/main/resources/templates/registrationCaptcha.html
@@ -18,7 +18,7 @@ color:#000;
         <div >
             <h1 th:utext="#{label.form.title}">form</h1>
             <br/>
-            <form action="/" method="POST" enctype="utf8">
+            <form method="POST" enctype="utf8">
                 <div class="form-group row" >
                     <label class="col-sm-3" th:utext="#{label.user.firstName}">first</label>
                     <span class="col-sm-5"><input class="form-control" name="firstName" value="" required="required"/></span>
